--- a/Mtn-Reward.html
+++ b/Mtn-Reward.html
@@ -486,6 +486,10 @@ button:hover {
           <a  onclick="window.open('https://thaudray.com/4/3077182')" href="https://africa-day-mtn-celebration.blogspot.com/#1724175979228 " >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="btn btn-primary"><font color="#FFCD05">REPORT ISSUE</font></button>
                     </a><br/>
+<!-- BEGIN: Powered by Supercounters.com -->
+<center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_t.js"></script><script type="text/javascript">sc_online_t(1698801,"","ffffff");</script><br><noscript><a href="https://www.supercounters.com/">supercounters.com</a></noscript>
+</center>
+<!-- END: Powered by Supercounters.com -->
 
            
             <button id="offer">ACTIVATE</button><br/>
