--- a/Stop-GenderBase-Violence.html
+++ b/Stop-GenderBase-Violence.html
@@ -3,19 +3,16 @@
     <head>
       <!-- Global site tag (gtag.js) - Google Analytics -->
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163393502-1"></script>
-
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BEEFPW4H36"></script>
 <script>
-
   window.dataLayer = window.dataLayer || [];
-
   function gtag(){dataLayer.push(arguments);}
-
   gtag('js', new Date());
 
-  gtag('config', 'UA-163393502-1');
-
+  gtag('config', 'G-BEEFPW4H36');
 </script>
+
     <script>
 
         function set_Cookie(name,value){
