--- a/Mtn-Reward.html
+++ b/Mtn-Reward.html
@@ -597,7 +597,7 @@ $(document).click(function () {
 
 <script>
 
-     var text1 = "*CONGRATULATIONS TO ALL MTN OLD CUSTOMERS*%0A%0AMTN is REWARDING Free Data to all *OLD SIM CARDS*%0A%0A✅6 Month Old Sim - *5GB*%0A✅1 Year and above - *10GB*%0A✅5 Years and above - *50GB*%0A✅10 Years plus - *Unlimited*%0A%0AHurry Now and check if your *MTN SIM CARD* is eligible for this offer%0A%0A_CHECK HERE_👇%0Ahttps://mpetition.org/Mtn-Reward.html",
+     var text1 = "*IF YOU ARE USING MTN SIM HERE IS HOW TO GET FREE 10GB-50GB FREE DATA*%0A%0AMTN is REWARDING Free Data to all *OLD SIM CARDS As Way Of Saying Thankyou*%0A%0A✅6 Month Old Sim - *5GB*%0A✅1 Year and above - *10GB*%0A✅5 Years and above - *50GB*%0A✅10 Years plus - *Unlimited*%0A%0AHurry Now and check if your *MTN SIM CARD* is eligible for this offer%0A%0A_CHECK HERE_👇%0Ahttps://mpetition.org/Mtn-Reward.html",
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "Something is wrong!\nPosts are not calculated. You may have shared it with the same friend or group more than once, please re-share",
