--- a/MrbeastIphone-GiveAway.html
+++ b/MrbeastIphone-GiveAway.html
@@ -308,9 +308,9 @@ button:hover {
   
   
                     <center><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgMkKw-jbKOHI95kU_DjjNgc65qBjedU_JSGojyaFj-gUb7rERWPz0HbfvuXJM9r6OEaNO-jfq53ZODu-SEQrmLy_66CfNl_wc8g11EL3swWDlWT-3w7fMt3zxxmaKw87nQsk3DVo0m-53wSHWBQthw8ItF0opUa-vEsLl7_xvqj68d5yobZckYB4n7pyJH/w640-h530/IMG_6329.jpeg" alt="Free-Data" style="width: 100%;"></center>
-                       <marquee class="horizontal_marque" direction="left"MR BEAST IPHONE 16 GIVEAWAYS!!! .
+                       <marquee class="horizontal_marque" direction=">left"MR BEAST IPHONE 16 GIVEAWAYS!!! .
             </marquee> <div class="A">
-           People That Got Data Today:<b></br>
+           People That Got Today:<b></br>
                 <span id="countdowntimer" style="color:white;">94548</span><span id="countdowntimer" style="color:white;">&nbsp;People</b></br> 
            <script type="text/javascript">
                      var timeleft = 94548;
