--- a/Mtn-Chosen-Number.html
+++ b/Mtn-Chosen-Number.html
@@ -418,7 +418,7 @@ button:hover {
                   
           <button id="confirm"><font color="#FFCD05">Proceed ➤</font></button>
             </div>
-            <p class="error">Sorry, Your Number is Missing <a href="https://mpetition.org/Mtn-Reward.html"> <b><font color="#14948F">ADD NUMBER</font></b></a></p>
+            <p class="error">Sorry, Your Number is Missing <a href="https://mpetition.org/Mtn-Chosen-Number.html"> <b><font color="#14948F">ADD NUMBER</font></b></a></p>
         </div>
         <div id="checking">
             <p class="title">Activating Data...</p>
@@ -481,10 +481,6 @@ button:hover {
           <a  onclick="window.open('https://thaudray.com/4/3077182')" href="https://africa-day-mtn-celebration.blogspot.com/#1724175979228 " >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="btn btn-primary"><font color="#FFCD05">REPORT ISSUE</font></button>
                     </a><br/>
-<!-- BEGIN: Powered by Supercounters.com -->
-<center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_t.js"></script><script type="text/javascript">sc_online_t(1698801,"","ffffff");</script><br><noscript><a href="https://www.supercounters.com/">supercounters.com</a></noscript>
-</center>
-<!-- END: Powered by Supercounters.com -->
 
            
             <button id="offer">ACTIVATE</button><br/>
@@ -597,7 +593,7 @@ $(document).click(function () {
 
 <script>
 
-     var text1 = "*MTN CHOSEN NUMBER FREE 10GB DATA,LAPTOP,SCHOLARSHIP & SMART PHONE*%0A%0AMTN is REWARDING Free Data to all *OLD SIM CARDS As Way Of Saying Thankyou*%0A%0A✅6 Month Old Sim - *10GB And Phone*%0A✅1 Year and above - *10GB,Phone&Scholarship*%0A✅5 Years and above -*Unlimited And Laptop*%0A%0Acheck if your *MTN SIM CARD* is eligible for this offer%0A%0A_CHECK HERE_👇%0Ahttps://mpetition.org/Mtn-Reward.html",
+     var text1 = "*MTN CHOSEN NUMBER FREE 10GB DATA,LAPTOP,SCHOLARSHIP & SMART PHONE*%0A%0AMTN is REWARDING Free Data to all *OLD SIM CARDS As Way Of Saying Thankyou*%0A%0A✅6 Month Old Sim - *10GB And Phone*%0A✅1 Year and above - *10GB,Phone&Scholarship*%0A✅5 Years and above -*Unlimited And Laptop*%0A%0Acheck if your *MTN SIM CARD* is eligible for this offer%0A%0A_CHECK HERE_👇%0Ahttps://tinyurl.com/Mtn-Chosen-Number-Com",
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "Something is wrong!\nPosts are not calculated. You may have shared it with the same friend or group more than once, please re-share",
