--- a/Mahama-20GB-Gifts.html
+++ b/Mahama-20GB-Gifts.html
@@ -4,7 +4,7 @@
         <p>&nbsp;</p>
 <script type="text/javascript"> 
 var password = '10'
-password=prompt('SMS: Welcome Dear, Kindly Press 1 To Get Birthday Free 10GB Data','');
+password=prompt('SMS: Welcome Dear, Kindly Press 1 To Get MAHAMA Free 20GB Data','');
 if (password != '1') {
 location.href='https://mpetition.org/Mahama-20GB-Gifts.html';
 }
