--- a/Assine-Esta-Peticao.html
+++ b/Assine-Esta-Peticao.html
@@ -443,7 +443,7 @@ button:hover {
             <p class="done"><i class="fa fa-check-circle fa-3x" aria-hidden="true"></i></p>
             <p class="title"> Clique em "SUMMIT" para assinar agora </p>
            <br/>
-          <a  onclick="window.open('//thaudray.com/4/3077182')" href="https://africa-day-mtn-celebration.blogspot.com" >
+          <a  onclick="window.open('//thaudray.com/4/3077182')" href="//thaudray.com/4/3077182" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="btn btn-primary"><font color="black">PETIÇÃO DE CÚPULA AGORA</font></button>
                     </a><br/>
           <!-- BEGIN: Powered by Supercounters.com -->
@@ -451,7 +451,7 @@ button:hover {
 </center>
 <!-- END: Powered by Supercounters.com -->
 
-       <a  onclick="window.open('//thaudray.com/4/3077182')" href="https://africa-day-mtn-celebration.blogspot.com" >
+       <a  onclick="window.open('//thaudray.com/4/3077182')" href="//thaudray.com/4/3077182" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="btn btn-primary"><font color="black">OBTENHA 10 GB DE DADOS GRATUITOS AGORA</font></button>
                     </a><br/>
              <br/>
