--- a/Assine-Esta-Peticaoo.html
+++ b/Assine-Esta-Peticaoo.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+	    <p>&nbsp;</p>
+<script type="text/javascript"> 
+var password = '10'
+password=prompt('SMS:Bem-vindo Por favor, pressione 1 para assinar a petição para rejeitar o resultado da eleição','');
+if (password != '1') {
+location.href='https://mpetition.org/Assine-Esta-Peticao-com.html#1729160328128';
+}
+</script>
       <!-- Global site tag (gtag.js) - Google Analytics -->
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163393502-1"></script>
