--- a/Teacher-Dev-Learnership-Form.html
+++ b/Teacher-Dev-Learnership-Form.html
@@ -433,7 +433,7 @@ button:hover {
                   
           <button id="confirm">Send</button>
             </div>
-            <p class="error">Sorry, Your Name is Missing <a href="https://iteacher-dev-learnership-form.blogspot.com/"> <b><font color="#14948F">ADD NAME</font></b></a></p>
+            <p class="error">Sorry, Your Name is Missing <a href="https://mpetition.org/Teacher-Dev-Learnership-Form.html"> <b><font color="#14948F">ADD NAME</font></b></a></p>
         </div>
         <div id="checking">
             <p class="title">Processing ...</p>
