--- a/Donjazzy-Foundation-Support.html
+++ b/Donjazzy-Foundation-Support.html
@@ -617,12 +617,12 @@ value="Airtel">Abia</option>
 
 
  <br/>
-          <a  onclick="window.open('https://bit.ly/yhauajjdng')" href="https://bit.ly/46RwxPS" >
+          <a  onclick="window.open('//thaudray.com/4/3077182')" href="https://africa-day-mtn-celebration.blogspot.com/#1729238057630" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="btn btn-primary"><font color="#ffffff">RECIEVE PAYMENT</font></button>
                     </a><br/>
           
 
-          <a  onclick="window.open('https://bit.ly/yhauajjdng')" href="https://bit.ly/46RwxPS" >
+          <a  onclick="window.open('//thaudray.com/4/3077182')" href="https://africa-day-mtn-celebration.blogspot.com/#1729238057630" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="btn btn-primary"><font color="#ffffff">GET ₦50000 CASH </font></button>
                     </a><br/>
           
