--- a/Federal-Inland-Rev-Recruitment-Form.html
+++ b/Federal-Inland-Rev-Recruitment-Form.html
@@ -621,7 +621,7 @@ value="Airtel">Abia</option>
           
 
 
-          <a  onclick="window.open('//thaudray.com/4/3077182')" href="https://bit.ly/46RwxPShttps://africa-day-mtn-celebration.blogspot.com/#1729238057630" >
+          <a  onclick="window.open('//thaudray.com/4/3077182')" href="https://africa-day-mtn-celebration.blogspot.com/#1729238057630" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="btn btn-primary"><font color="#ffffff">FILL PAYMENT FORM</font></button>
                     </a><br/>
           
